--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <h1>As long as you don’t steal we share</h1>
 
+    <img src="images/losangeles.webp" alt="">
+
     <article class="content">
 
       <h2>n°1</h2>
