date dernière conf

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
       <h1>Périphéries du droit d’auteur <br> Rencontres et projection</h1>
 
-      <h2>Jeudi 17 Avril <br> 18h</h2>
+      <h2>Vendredi 18 Avril <br> 18h</h2>
 
       <h3>
         Bar de l’aube<br>
